--- a/RannaApp/Views/SupportForm/Index.cshtml
+++ b/RannaApp/Views/SupportForm/Index.cshtml
@@ -68,6 +68,6 @@ else
 
     function editForm(formId) {
         // Redirect to edit form page
-        window.location.href = "/Support/Edit/" + formId;
+        window.location.href = "/SupportForm/Edit/" + formId;
     }
 </script>
