--- a/RannaApp/Views/Account/Login.cshtml
+++ b/RannaApp/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Login</h2>
 
-@using (Html.BeginForm("Login", "Account", FormMethod.Post))
+@using (Html.BeginForm("Login", "Account", FormMethod.Post)) // action ve controller belirtiliyor
 {
     @Html.AntiForgeryToken()
 
@@ -22,3 +22,4 @@
 
     <button type="submit" class="btn btn-primary">Login</button>
 }
+
