--- a/RannaApp/Views/Account/Login.cshtml
+++ b/RannaApp/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Login</h2>
 
-@using (Html.BeginForm("Login", "Account", FormMethod.Post)) // action ve controller belirtiliyor
+@using (Html.BeginForm("Login", "Account", FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
 
